--- a/Jirono/aboutus.html
+++ b/Jirono/aboutus.html
@@ -7,11 +7,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="images/favicon.png">
     <title>Jirono-IT Solutions and Corporate Template</title>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css"
-        integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l"
+        crossorigin="anonymous">
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
-        integrity="sha512-c42qTSw/wPZ3/5LBzD+Bw5f7bSF2oxou6wEb+I/lqeaKV5FDIfMvvRp772y4jcJLKuGUOpbJMdg/BTl50fJYAw=="
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" integrity="sha512-c42qTSw/wPZ3/5LBzD+Bw5f7bSF2oxou6wEb+I/lqeaKV5FDIfMvvRp772y4jcJLKuGUOpbJMdg/BTl50fJYAw=="
         crossorigin="anonymous" />
     <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@300;400;600;800&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
@@ -28,9 +27,8 @@
                 <a class="logo navbar-brand" href="#">
                     <img src="images/logo-dark.png" alt="">
                 </a>
-                <button class="navbar-toggler" type="button" data-toggle="collapse"
-                    data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
-                    aria-label="Toggle navigation">
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+                    aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
 
@@ -40,20 +38,20 @@
                             <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
                         </li>
                         <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
-                                data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
+                                aria-haspopup="true" aria-expanded="false">
                                 Discover
                             </a>
                             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                    <a class="dropdown-item" href="#features">Features</a>
-                                    <a class="dropdown-item" href="#our-team">Our team</a>
-                                    <a class="dropdown-item" href="#pricing-plans">Pricing Plans</a>
-                                    <a class="dropdown-item" href="#blog-posts">Latest blogs</a>
+                                <a class="dropdown-item" href="#features">Features</a>
+                                <a class="dropdown-item" href="#our-team">Our team</a>
+                                <a class="dropdown-item" href="#pricing-plans">Pricing Plans</a>
+                                <a class="dropdown-item" href="#blog-posts">Latest blogs</a>
                             </div>
                         </li>
                         <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
-                                data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
+                                aria-haspopup="true" aria-expanded="false">
                                 Pages
                             </a>
                             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
@@ -78,18 +76,30 @@
         <!-- NAV END -->
     </header>
     <main>
-        <!-- <div class="parallax-about">
-            <div class="cover-image">
-            </div>
-            <div class="about-caption">
-                <h1>About Us</h1>
-                <div class="caption-links d-flex">
-                    <a href="#">Home   <i class="fas fa-angle-right"></i></a>
-                    <p>About us</p>
+        <!-- Parallax start -->
+        <section id="Parallax" class="start">
+            <div class="ParallaxContent">
+                <div class="about-caption">
+                    <div class="container">
+                        <div class="row justify-content-center">
+                            <div class="col-lg-12">
+                                <h1>About</h1>
+                            </div>
+                            <div class="col-lg-3 d-flex justify-content-center align-items-center">
+                                <a href="index.html">Home</a>
+                                <i class="fas fa-angle-right"></i>
+                                <p class="mb-0">About</p>
+                            </div>
+                        </div>
+                    </div>
+
                 </div>
             </div>
-        </div> -->
-        <section id="ways">
+        </section>
+        <!-- Parallax end -->
+
+        <!-- First part of about-page start -->
+        <section class="ways">
             <div class="container">
                 <div class="row">
                     <div class="col-lg-12">
@@ -148,18 +158,23 @@
                 </div>
                 <div class="row mt-5">
                     <div class="col-lg-12">
-                        <div class="describing">
-                            <div class="about-images">
+                        <div class="row">
+                            <div class="col-lg-8">
                                 <div class="image">
                                     <img src="images/blog3.jpg">
                                 </div>
+                            </div>
+                            <div class="col-lg-5 move">
                                 <div class="mis-layer layer">
                                     <h5>Our Mission</h5>
-                                    <p>Praesent posuere nec nisl quis hendrerit. Duis sit amet rutrum lorem. Ut maximus orci in
+                                    <p>Praesent posuere nec nisl quis hendrerit. Duis sit amet rutrum lorem. Ut maximus
+                                        orci in
                                         metus blandit, et placerat dolor congue.</p>
                                     <p>Proin tempor ligula nec dolor facilisis mattis. Suspendisse potenti. Suspendisse
-                                        efficitur turpis quis risus molestie cursus. Cras malesuada a massa et aliquet. Nunc vel
-                                        urna eu neque consectetur imperdiet. Sed pretium neque ligula, ac vehicula massa aliquet
+                                        efficitur turpis quis risus molestie cursus. Cras malesuada a massa et aliquet.
+                                        Nunc vel
+                                        urna eu neque consectetur imperdiet. Sed pretium neque ligula, ac vehicula
+                                        massa aliquet
                                         eu.</p>
                                 </div>
                             </div>
@@ -167,41 +182,75 @@
                     </div>
                 </div>
             </div>
-            <div class="parallax-home2">
-                <div class="cover-image2">
-                </div>
-                <div class="parallax-info">
-                    <h4> We design and develop <span style="text-decoration:underline">web apps</span> that delight your
-                        users and grow your business.</h4>
-                    <a href="#" class="btn">CONTACT US</a>
-                </div>
-            </div>
-            <div class="container">
-                <div class="row">
-                    <div class="describing">
-                        <div class="vis-image about-images">
-                            <div class="image">
-                                <img src="images/about.jpg">
+        </section>
+        <!-- First part of about-page end -->
+
+        <!-- Second parallax  -->
+        <section id="Parallax" class="start home">
+            <div class="ParallaxContent">
+                <div class="about-caption">
+                    <div class="container">
+                        <div class="row justify-content-center">
+                            <div class="col-lg-12 d-flex justify-content-center align-items-center">
+                                <h4> We design and develop <span style="text-decoration:underline">web apps</span> that
+                                    delight your
+                                    users and grow your business.</h4>
+
                             </div>
-                            <div class="layer vis-layer">
-                                <h5>Our Vision</h5>
-                                <p>Praesent posuere nec nisl quis hendrerit. Duis sit amet rutrum lorem. Ut maximus orci in
-                                    metus blandit, et placerat dolor congue.</p>
-                                <p>Proin tempor ligula nec dolor facilisis mattis. Suspendisse potenti. Suspendisse
-                                    efficitur turpis quis risus molestie cursus. Cras malesuada a massa et aliquet. Nunc vel
-                                    urna eu neque consectetur imperdiet. Sed pretium neque ligula, ac vehicula massa aliquet
-                                    eu.</p>
+                            <div class="col-lg-12 d-flex justify-content-center align-items-center">
+                                <a href="#" class="btn">CONTACT US</a>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
         </section>
+        <!-- Second parallax end  -->
+
+        <!-- Second part of about-page start -->
+        <section class="ways second">
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-12">
+                        <div class="row">
+                            <div class="col-lg-5 move1 order-lg-1">
+                                    <div class="layer vis-layer">
+                                        <h5>Our Vision</h5>
+                                        <p>Praesent posuere nec nisl quis hendrerit. Duis sit amet rutrum lorem. Ut
+                                            maximus
+                                            orci in
+                                            metus blandit, et placerat dolor congue.</p>
+                                        <p>Proin tempor ligula nec dolor facilisis mattis. Suspendisse potenti.
+                                            Suspendisse
+                                            efficitur turpis quis risus molestie cursus. Cras malesuada a massa et
+                                            aliquet.
+                                            Nunc vel
+                                            urna eu neque consectetur imperdiet. Sed pretium neque ligula, ac vehicula
+                                            massa
+                                            aliquet
+                                            eu.</p>
+                                    </div>
+                            </div>
+                            <div class="offset-lg-4 col-lg-8 order-lg-2">
+                                <div class="image">
+                                    <img src="images/about.jpg">
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- Second part of about-page end -->
+
     </main>
+
+
     <footer>
+        <!-- Footer start -->
         <div class="container">
-            <!-- Footer info  -->
             <div class="row">
+                <!-- Footer info start -->
                 <div class="col-lg-5">
                     <img src="images/logo-white.png" alt="">
                     <div class="caption mt-3">
@@ -209,6 +258,9 @@
                         ut lacinia tortor morbi ultricies laoreet ullamcorper phasellus semper.
                     </div>
                 </div>
+                <!-- Footer info end -->
+
+
                 <!-- Footer navigation start -->
                 <div class="col-lg-2">
                     <h5>Helpful links</h5>
@@ -232,7 +284,7 @@
                 </div>
                 <!-- Footer navigation end -->
 
-                <!-- Footer contact information -->
+                <!-- Footer contact information start -->
                 <div class="col-lg-3">
                     <h5>Contact Us</h5>
                     <div class="info">
@@ -250,8 +302,8 @@
                             <li><i class="fab fa-github-square"></i></li>
                         </ul>
                     </div>
-                    
                 </div>
+                <!-- Footer contact information end -->
             </div>
             <div class="row mt-3">
                 <div class="col-lg-12">
@@ -259,23 +311,20 @@
                 </div>
             </div>
         </div>
+        <!-- Footer end -->
     </footer>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
-    crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
-    integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
-    crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns"
-    crossorigin="anonymous"></script>
+        crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns"
+        crossorigin="anonymous"></script>
 
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"
-        integrity="sha512-bLT0Qm9VnAYZDflyKcBaQ2gg0hSYNQrJ8RilYldYQ1FxQYoCLtUjuuRuZo+fjqhx/qtq/1itJ0C2ejDxltZVFg=="
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js" integrity="sha512-bLT0Qm9VnAYZDflyKcBaQ2gg0hSYNQrJ8RilYldYQ1FxQYoCLtUjuuRuZo+fjqhx/qtq/1itJ0C2ejDxltZVFg=="
         crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-parallax/1.1.3/jquery-parallax-min.js"
-        integrity="sha512-ES/eSqVi/9sgeZfvunOto+gwgFGrD/hzi5UOJFDR1Me8acKSBJIb2Gk0IyKje2ZaX+OovAG2/bRzj/uBcNeesg=="
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-parallax/1.1.3/jquery-parallax-min.js" integrity="sha512-ES/eSqVi/9sgeZfvunOto+gwgFGrD/hzi5UOJFDR1Me8acKSBJIb2Gk0IyKje2ZaX+OovAG2/bRzj/uBcNeesg=="
         crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/wow/1.1.2/wow.min.js"
-        integrity="sha512-Eak/29OTpb36LLo2r47IpVzPBLXnAMPAVypbSZiZ4Qkf8p/7S/XRG5xp7OKWPPYfJT6metI+IORkR5G8F900+g=="
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/wow/1.1.2/wow.min.js" integrity="sha512-Eak/29OTpb36LLo2r47IpVzPBLXnAMPAVypbSZiZ4Qkf8p/7S/XRG5xp7OKWPPYfJT6metI+IORkR5G8F900+g=="
         crossorigin="anonymous"></script>
     <script src="js/main.js"></script>
 </body>
