--- a/Jirono/index.html
+++ b/Jirono/index.html
@@ -292,41 +292,7 @@
         </section>
         <!-- Design area end  -->
 
-        <!-- Parallax -->
-        <!-- <section id="parallax-stuff">
-            <div class="parallax-home">
-                <div id="countTo">
-                    <div class="container">
-                        <div class="row">
-                            <div class="col-lg-3 col-md-6 col-sm-12 col-xs-12 p-0">
-                                <div class="count-item">
-                                    <strong class="timer" data-from="10" data-to="96"></strong>
-                                    <span class="d-block text-center">Prpoect<br>Complate</span>
-                                </div>
-                            </div>
-                            <div class="col-lg-3 col-md-6 col-sm-12 col-xs-12 p-0">
-                                <div class="count-item">
-                                    <strong class="timer" data-from="5" data-to="190"></strong>
-                                    <span class="d-block text-center">Prpoect<br>Complate</span>
-                                </div>
-                            </div>
-                            <div class="col-lg-3 col-md-6 col-sm-12 col-xs-12 p-0">
-                                <div class="count-item">
-                                    <strong class="timer" data-from="5" data-to="12"></strong>
-                                    <span class="d-block text-center">Prpoect<br>Complate</span>
-                                </div>
-                            </div>
-                            <div class="col-lg-3 col-md-6 col-sm-12 col-xs-12 p-0">
-                                <div class="count-item">
-                                    <strong class="timer" data-from="5" data-to="46"></strong>
-                                    <span class="d-block text-center">Prpoect<br>Complate</span>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </section> -->
+        <!-- ParallaxCounter start -->
         <section id="ParallaxCounter" class="start">
             <div class="parallaxContent">
                 <div class="container">
@@ -363,6 +329,8 @@
                 </div>
             </div>
         </section>
+        <!-- ParallaxCounter end -->
+
 
         <!-- Our team start  -->
         <section id="our-team">
@@ -579,17 +547,30 @@
                 </div>
             </div>
         </section>
-        <!-- Second parallax  -->
-        <div class="parallax-home2">
-            <div class="cover-image2">
-            </div>
-            <div class="parallax-info">
-                <h4> We design and develop <span style="text-decoration:underline">web apps</span> that delight your
-                    users and grow your business.</h4>
-                <a href="#" class="btn">CONTACT US</a>
-            </div>
+        <!-- Pricing Plans end  -->
 
-        </div>
+
+        <!-- Second parallax  -->
+        <section id="Parallax" class="start home">
+            <div class="ParallaxContent">
+                <div class="about-caption">
+                    <div class="container">
+                        <div class="row justify-content-center">
+                            <div class="col-lg-12 d-flex justify-content-center align-items-center">
+                                <h4> We design and develop <span style="text-decoration:underline">web apps</span> that
+                                    delight your
+                                    users and grow your business.</h4>
+
+                            </div>
+                            <div class="col-lg-12 d-flex justify-content-center align-items-center">
+                                <a href="#" class="btn">CONTACT US</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- Second parallax end  -->
 
         <!-- Latest Blog posts start -->
         <section id="blog-posts">
@@ -658,10 +639,13 @@
         </section>
         <!-- Latest Blog posts end  -->
     </main>
+
     <footer>
+        <!-- Footer start -->
         <div class="container">
-            <!-- Footer info  -->
+           
             <div class="row">
+                <!-- Footer info start -->
                 <div class="col-lg-5 col-md-12 col-sm-12">
                     <img src="images/logo-white.png" alt="">
                     <div class="caption mt-3">
@@ -669,8 +653,10 @@
                         ut lacinia tortor morbi ultricies laoreet ullamcorper phasellus semper.
                     </div>
                 </div>
+                  <!-- Footer info end  -->
+
                 <!-- Footer navigation start -->
-                <div class="col-lg-2 col-md-4 col-sm-6 unset">
+                <div class="col-lg-2 col-md-4 col-sm-6  mt-3 unset">
                     <h5>Helpful links</h5>
                     <ul>
                         <li> <i class="fas fa-angle-right"></i><a href="#"> About us</a></li>
@@ -680,20 +666,19 @@
 
                     </ul>
                 </div>
-                <div class="col-lg-2 col-md-4 col-sm-6 unset">
+                <div class="col-lg-2 col-md-4 col-sm-6  mt-3 unset">
                     <h5>Support</h5>
                     <ul>
                         <li><i class="fas fa-angle-right"></i><a href="#"> Privacy Policy</a></li>
                         <li><i class="fas fa-angle-right"></i><a href="#"> Terms of Use</a></li>
                         <li><i class="fas fa-angle-right"></i><a href="#"> Support Center</a></li>
                         <li><i class="fas fa-angle-right"></i><a href="#"> Contact</a></li>
-
                     </ul>
                 </div>
                 <!-- Footer navigation end -->
 
-                <!-- Footer contact information -->
-                <div class="col-lg-3 col-md-4 col-sm-12">
+                <!-- Footer contact information start -->
+                <div class="col-lg-3 col-md-4 col-sm-12  mt-3">
                     <h5>Contact Us</h5>
                     <div class="info">
                         <p>455 West Orchard Street</p>
@@ -710,8 +695,8 @@
                             <li><i class="fab fa-github-square"></i></li>
                         </ul>
                     </div>
-
                 </div>
+                 <!-- Footer contact information end -->
             </div>
             <div class="row mt-3">
                 <div class="col-lg-12">
@@ -719,6 +704,7 @@
                 </div>
             </div>
         </div>
+        <!-- Footer end -->
     </footer>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
         crossorigin="anonymous"></script>
