--- a/Jirono/blog.html
+++ b/Jirono/blog.html
@@ -77,6 +77,7 @@
 
     </header>
     <main>
+        <!-- Parallax start  -->
         <section id="Parallax" class="start">
             <div class="ParallaxContent">
                 <div class="about-caption">
@@ -86,7 +87,7 @@
                                 <h1>Blog</h1>
                             </div>
                             <div class="col-lg-3 d-flex justify-content-center align-items-center">
-                                <a href="#">Home</a>
+                                <a href="index.html">Home</a>
                                 <i class="fas fa-angle-right"></i>
                                 <p class="mb-0">Blog</p>
                             </div>
@@ -96,11 +97,13 @@
                 </div>
             </div>
         </section>
+        <!-- Parallax end  -->
 
-
+        <!-- Blog section start  -->
         <section id="blog">
             <div class="container">
                 <div class="row">
+                    <!-- Blog cards start  -->
                     <div class="col-lg-8">
                         <div class="row">
                             <div class="col-lg-12">
@@ -212,6 +215,7 @@
                                     </div>
                                 </div>
                             </div>
+                             <!-- Blog cards end  -->
                         </div>
                         <div class="row ">
                             <div class="col-lg-12 ">
@@ -299,6 +303,7 @@
             </div>
 
         </section>
+        <!-- Blog section end  -->
     </main>
     <footer>
         <!-- Footer start -->
