--- a/Jirono/faq.html
+++ b/Jirono/faq.html
@@ -76,6 +76,7 @@
         <!-- NAV END -->
     </header>
     <main>
+        <!-- Parallax start -->
         <section id="Parallax" class="start">
             <div class="ParallaxContent">
                 <div class="about-caption">
@@ -85,7 +86,7 @@
                                 <h1>FAQ's</h1>
                             </div>
                             <div class="col-lg-3 d-flex justify-content-center align-items-center ">
-                                <a href="#">Home</a>
+                                <a href="index.html">Home</a>
                                 <i class="fas fa-angle-right"></i>
                                 <p class="mb-0">FAQ's</p>
                             </div>
@@ -95,7 +96,10 @@
                 </div>
             </div>
         </section>
+        <!-- Parallax end -->
 
+        
+        <!-- Accordion and info start -->
         <section id="faq">
             <div class="container">
                 <div class="row">
@@ -143,6 +147,9 @@
                 </div>
             </div>
         </section>
+        <!-- Accordion and info start -->
+
+        <!-- Features strart -->
         <section id="features">
             <div class="container">
                 <div class="row">
@@ -200,6 +207,7 @@
                 </div>
             </div>
         </section>
+        <!-- Features end -->
     </main>
     <footer>
             <!-- Footer start -->
