--- a/Jirono/features.html
+++ b/Jirono/features.html
@@ -7,10 +7,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="images/favicon.png">
     <title>Jirono-IT Solutions and Corporate Template</title>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l"
-        crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css"
+        integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" integrity="sha512-c42qTSw/wPZ3/5LBzD+Bw5f7bSF2oxou6wEb+I/lqeaKV5FDIfMvvRp772y4jcJLKuGUOpbJMdg/BTl50fJYAw=="
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+        integrity="sha512-c42qTSw/wPZ3/5LBzD+Bw5f7bSF2oxou6wEb+I/lqeaKV5FDIfMvvRp772y4jcJLKuGUOpbJMdg/BTl50fJYAw=="
         crossorigin="anonymous" />
     <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@300;400;600;800&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
@@ -27,8 +28,9 @@
                 <a class="logo navbar-brand" href="#">
                     <img src="images/logo-dark.png" alt="">
                 </a>
-                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
-                    aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <button class="navbar-toggler" type="button" data-toggle="collapse"
+                    data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
+                    aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
 
@@ -38,8 +40,8 @@
                             <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
                         </li>
                         <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
-                                aria-haspopup="true" aria-expanded="false">
+                            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
+                                data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                                 Discover
                             </a>
                             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
@@ -50,8 +52,8 @@
                             </div>
                         </li>
                         <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
-                                aria-haspopup="true" aria-expanded="false">
+                            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
+                                data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                                 Pages
                             </a>
                             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
@@ -85,7 +87,7 @@
                                 <h1>Features</h1>
                             </div>
                             <div class="col-lg-3 d-flex justify-content-center align-items-center">
-                                <a href="#">Home</a>
+                                <a href="index.html">Home</a>
                                 <i class="fas fa-angle-right"></i>
                                 <p class="mb-0">Features</p>
                             </div>
@@ -96,7 +98,7 @@
             </div>
         </section>
 
-        </div>
+        <!-- Cloud cards start -->
         <section id="toCloud">
             <div class="container">
                 <div class="row mt-5">
@@ -197,40 +199,9 @@
                 </div>
             </div>
         </section>
-        <!-- <div class="parallax-home">
-                <div class="cover-image">
-                </div>
-                <section id="countTo">
-                    <div class="container">
-                        <div class="row">
-                            <div id="number" class="col-lg-3 p-0">
-                                <div class="count-item">
-                                    <strong class="timer" data-from="10" data-to="96"></strong>
-                                    <span class="d-block text-center">Prpoect<br>Complate</span>
-                                </div>
-                            </div>
-                            <div class="col-lg-3 p-0">
-                                <div class="count-item">
-                                    <strong class="timer" data-from="5" data-to="190"></strong>
-                                    <span class="d-block text-center">Prpoect<br>Complate</span>
-                                </div>
-                            </div>
-                            <div class="col-lg-3 p-0">
-                                <div class="count-item">
-                                    <strong class="timer" data-from="5" data-to="12"></strong>
-                                    <span class="d-block text-center">Prpoect<br>Complate</span>
-                                </div>
-                            </div>
-                            <div class="col-lg-3 p-0">
-                                <div class="count-item">
-                                    <strong class="timer" data-from="5" data-to="46"></strong>
-                                    <span class="d-block text-center">Prpoect<br>Complate</span>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </section>
-            </div> -->
+        <!-- Cloud cards end  -->
+
+        <!-- Features description start  -->
         <section id="features">
             <div class="container">
                 <div class="row">
@@ -238,7 +209,8 @@
                         <div class="features-caption">
                             <div class="text">
                                 <h2>Cloud Services</h2>
-                                <p>Phasellus vitae velit sit amet diam semper commodo quis quis <span class="d-block">libero.
+                                <p>Phasellus vitae velit sit amet diam semper commodo quis quis <span
+                                        class="d-block">libero.
                                         Morbi consequat arcu
                                         augue, molestie faucibus metus </span>ullamcorper vel.</p>
                             </div>
@@ -246,7 +218,8 @@
                         </div>
                         <div class="row">
                             <div class="col-lg-6 col-md-6 col-sm-12">
-                                <a href="#" class="active2 designList btn active"><i class="fas fa-angle-right"></i><span>Near
+                                <a href="#" class="active2 designList btn active"><i
+                                        class="fas fa-angle-right"></i><span>Near
                                         Cloud</span></a>
                             </div>
                             <div class="col-lg-6 col-md-6 col-sm-12">
@@ -281,13 +254,15 @@
                     </div>
                     <div class="col-lg-1"></div>
                     <div class="col-lg-5">
-                        <div class="features-image d-flex justify-content-center wow animate__animated animate__fadeInLeft ">
+                        <div
+                            class="features-image d-flex justify-content-center wow animate__animated animate__fadeInLeft ">
                             <img src="images/dark-1.png" class="img-fluid" alt="">
                         </div>
                     </div>
                 </div>
             </div>
         </section>
+         <!-- Features description end  -->
     </main>
     <footer>
         <div class="container">
@@ -351,19 +326,25 @@
             </div>
         </div>
     </footer>
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+        integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
         crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
+        integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
         crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns"
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns"
         crossorigin="anonymous"></script>
 
 
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js" integrity="sha512-bLT0Qm9VnAYZDflyKcBaQ2gg0hSYNQrJ8RilYldYQ1FxQYoCLtUjuuRuZo+fjqhx/qtq/1itJ0C2ejDxltZVFg=="
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"
+        integrity="sha512-bLT0Qm9VnAYZDflyKcBaQ2gg0hSYNQrJ8RilYldYQ1FxQYoCLtUjuuRuZo+fjqhx/qtq/1itJ0C2ejDxltZVFg=="
         crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-parallax/1.1.3/jquery-parallax-min.js" integrity="sha512-ES/eSqVi/9sgeZfvunOto+gwgFGrD/hzi5UOJFDR1Me8acKSBJIb2Gk0IyKje2ZaX+OovAG2/bRzj/uBcNeesg=="
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-parallax/1.1.3/jquery-parallax-min.js"
+        integrity="sha512-ES/eSqVi/9sgeZfvunOto+gwgFGrD/hzi5UOJFDR1Me8acKSBJIb2Gk0IyKje2ZaX+OovAG2/bRzj/uBcNeesg=="
         crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/wow/1.1.2/wow.min.js" integrity="sha512-Eak/29OTpb36LLo2r47IpVzPBLXnAMPAVypbSZiZ4Qkf8p/7S/XRG5xp7OKWPPYfJT6metI+IORkR5G8F900+g=="
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/wow/1.1.2/wow.min.js"
+        integrity="sha512-Eak/29OTpb36LLo2r47IpVzPBLXnAMPAVypbSZiZ4Qkf8p/7S/XRG5xp7OKWPPYfJT6metI+IORkR5G8F900+g=="
         crossorigin="anonymous"></script>
     <script src="js/jquery.countTo.js"></script>
     <script src="js/main.js"></script>
