--- a/Jirono/aboutus.html
+++ b/Jirono/aboutus.html
@@ -249,20 +249,20 @@
     <footer>
         <!-- Footer start -->
         <div class="container">
+           
             <div class="row">
                 <!-- Footer info start -->
-                <div class="col-lg-5">
+                <div class="col-lg-5 col-md-12 col-sm-12">
                     <img src="images/logo-white.png" alt="">
                     <div class="caption mt-3">
                         Morbi convallis bibendum urna ut viverra. Maecenas quis consequat libero, a feugiat eros. Nunc
                         ut lacinia tortor morbi ultricies laoreet ullamcorper phasellus semper.
                     </div>
                 </div>
-                <!-- Footer info end -->
-
+                  <!-- Footer info end  -->
 
                 <!-- Footer navigation start -->
-                <div class="col-lg-2">
+                <div class="col-lg-2 col-md-4 col-sm-6  mt-3 unset">
                     <h5>Helpful links</h5>
                     <ul>
                         <li> <i class="fas fa-angle-right"></i><a href="#"> About us</a></li>
@@ -272,20 +272,19 @@
 
                     </ul>
                 </div>
-                <div class="col-lg-2">
+                <div class="col-lg-2 col-md-4 col-sm-6  mt-3 unset">
                     <h5>Support</h5>
                     <ul>
                         <li><i class="fas fa-angle-right"></i><a href="#"> Privacy Policy</a></li>
                         <li><i class="fas fa-angle-right"></i><a href="#"> Terms of Use</a></li>
                         <li><i class="fas fa-angle-right"></i><a href="#"> Support Center</a></li>
                         <li><i class="fas fa-angle-right"></i><a href="#"> Contact</a></li>
-
                     </ul>
                 </div>
                 <!-- Footer navigation end -->
 
                 <!-- Footer contact information start -->
-                <div class="col-lg-3">
+                <div class="col-lg-3 col-md-4 col-sm-12  mt-3">
                     <h5>Contact Us</h5>
                     <div class="info">
                         <p>455 West Orchard Street</p>
@@ -303,7 +302,7 @@
                         </ul>
                     </div>
                 </div>
-                <!-- Footer contact information end -->
+                 <!-- Footer contact information end -->
             </div>
             <div class="row mt-3">
                 <div class="col-lg-12">
